tests/conformance/errors/class-misuse.ur
jamaat Ginti {
  qeemat: adad = 0;
}
pakka g = naya Ginti();
g.qeemat = "das";
bolo yeh.qeemat;
